--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="google-site-verification" content="g8SeY7J_QDii1RieR5Po7_xwMPEGefWT7hszU1PJTBk" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Charlotte Personal Injury Lawyer – Stewart Law Offices</title>
@@ -268,3 +269,4 @@ Phone: (704) 521-5000</p>
 </div>
 </body>
 </html>
+
