--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ footer h3 {
 
 <p>If you’ve been in a car crash, slipped on a wet floor, or got injured at work, a lawyer steps in to handle everything you shouldn’t have to worry about while you heal. They talk to the insurance companies, gather evidence, file paperwork, and negotiate settlements. And if things get tough, they’re ready to stand up in court for you.</p>
 
-<p>In Charlotte, one of the most trusted names for this work is Stewart Law Offices. They’ve built their reputation by helping clients across North and South Carolina win fair settlements and rebuild their lives.</p>
+<p>In Charlotte, one of the most trusted names for this work is Stewart Law Offices. They’ve built their reputation by helping clients across North Carolina win fair settlements and rebuild their lives.</p>
 
 <p>Their office, located at 2427 Tuckaseegee Road, Suite A, isn’t just another law firm. It’s a place where clients are treated like family, not case numbers.</p>
 
@@ -269,4 +269,5 @@ Phone: (704) 521-5000</p>
 </div>
 </body>
 </html>
+
 
