--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ footer h3 {
 
 <h2>Stewart Law Offices: Where Compassion Meets Experience</h2>
 
-<p>Now, not every law firm feels personal. Some places make you feel like you’re talking to a machine. But Stewart Law Offices isn’t one of them. Their approach is warm, clear, and genuinely helpful. They know that people come to them during one of the worst times in their lives — and they treat that seriously.</p>
+<p>Now, not every law firm feels personal. Some places make you feel like you’re talking to a machine. But <a href="https://personalinjurycharlottelawyer.github.io/get-help/" target="_blank">Stewart Law Offices</a> isn’t one of them. Their approach is warm, clear, and genuinely helpful. They know that people come to them during one of the worst times in their lives — and they treat that seriously.</p>
 
 <p>Every client who walks in the door gets time, attention, and honest communication. The lawyers don’t promise the moon. Instead, they explain what can be done, how long it might take, and what your options are. That level of honesty is rare these days.</p>
 
@@ -230,7 +230,7 @@ footer h3 {
 
 <p>Stewart Law Offices helps employees who get injured on the job. They guide workers through filing claims, appealing denied cases, and fighting for the benefits they deserve.</p>
 
-<p>In North Carolina, workers’ compensation laws can be confusing. Many people don’t even realize they’re entitled to help beyond basic medical bills. That’s why having a Charlotte personal injury lawyer who understands this system can make all the difference.</p>
+<p>In North Carolina, workers’ compensation laws can be confusing. Many people don’t even realize they’re entitled to help beyond basic medical bills. That’s why having a Charlotte <a href="https://personalinjurylawyer.vercel.app/" target="_blank">personal injury</a> lawyer who understands this system can make all the difference.</p>
 
 <h2>Slip and Fall Accidents: When Unsafe Spaces Cause Serious Pain</h2>
 
@@ -269,5 +269,6 @@ Phone: (704) 521-5000</p>
 </div>
 </body>
 </html>
+
 
 
